--- a/3D Beginner/Packages/manifest.json
+++ b/3D Beginner/Packages/manifest.json
@@ -1,10 +1,13 @@
 {
   "dependencies": {
     "com.glairedaggers.retrotvfx": "file:/Users/guillermoavina-gil434/Downloads/RetroTVFX-2.0.0",
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.collab-proxy": "2.2.0",
+    "com.unity.feature.cinematic": "1.0.0",
     "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.visualstudio": "2.0.21",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
